# dragonfly-game-engine-modern

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/: pull_request_template.md
.github/workflows/: dragonfly-build.yaml  dragonfly-checks.yaml  main.yaml  saucer-shoot-build.yaml  saucer-shoot-checks.yaml  suacer-shoot-build.yaml
demo_games/saucer_shoot/: CMakeLists.txt  game.cpp
demo_games/saucer_shoot/assets/sounds/: README.txt
demo_games/saucer_shoot/assets/sprites-simple/: explosion-spr.txt  gameover-spr.txt  gamestart-spr.txt  saucer-spr.txt  ship-spr.txt
demo_games/saucer_shoot/src/display/: game_over.cpp  game_over.h  game_start.cpp  game_start.h  points.cpp  points.h
demo_games/saucer_shoot/src/player/: bullet.cpp  bullet.h  explosion.cpp  explosion.h  hero.cpp  hero.h  nuke.cpp  nuke.h  reticle.cpp  reticle.h
demo_games/saucer_shoot/src/world/: saucer.cpp  saucer.h  star.cpp  star.h
dragonfly/: CMakeLists.txt  test_game.cpp
dragonfly/include/: clock.h  color.h  config.h  default_font.h  display_manager.h  event.h  event_keyboard.h  event_mouse.h  event_step.h  game_manager.h  input_manager.h  log_manager.h  manager.h  object.h  object_list.h  vector.h  world_manager.h
dragonfly/include/df/: vector.h
dragonfly/src/: clock.cpp  display_manager.cpp  event.cpp  event_step.cpp  game_manager.cpp  input_manager.cpp  log_manager.cpp  manager.cpp  object.cpp  object_list.cpp  vector.cpp  world_manager.cpp
dragonfly/tests/: CMakeLists.txt  base_events_test.cpp  clock_test.cpp  event_inputs_test.cpp  game_manager_test.cpp  log_manager_test.cpp  manager_test.cpp  object_list_test.cpp  object_test.cpp  vector_test.cpp  world_manager_test.cpp
saucer_shoot/: .clang-tidy  CMakeLists.txt  df-config.txt  game.cpp  saucer_shoot
saucer_shoot/src/: bullet.cpp  bullet.h  event_nuke.cpp  event_nuke.h  explosion.cpp  explosion.h  hero.cpp  hero.h  nuke.h  points.cpp  points.h  reticle.cpp  reticle.h  saucer.cpp  saucer.h
saucer_shoot/src/display/: game_over.cpp  game_over.h  game_start.cpp  game_start.h  points.cpp  points.h
saucer_shoot/src/player/: bullet.cpp  bullet.h  explosion.h  hero.cpp  hero.h  nuke.cpp  reticle.cpp  reticle.h
saucer_shoot/src/world/: saucer.cpp  saucer.h  star.cpp  star.h
